<resources>
    <string name="app_name">DuwaNews</string>
    <string name="menu_terbaru">Terbaru</string>
    <string name="menu_beritautama">Berita Utama</string>
    <string name="menu_antarkansemangat">#AntarkanSemangat</string>
    <string name="menu_mostpopular">most popular</string>
    <string name="var_contdesc">contdesc</string>
    <string name="judul_headline">Judul Headline</string>
    <string name="deskripsi_headline">Deskripsi Headline</string>
    <string name="home">Home</string>
    <string name="layanan">layanan</string>
    <string name="kategori">kategori</string>
    <string name="video">video</string>
    <string name="fotodesc">Foto : Dok. detiknews</string>
    <string name="detiknews">detikNews</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="loremsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.</string>
    <string name="duwanews">DuwaNews</string>
    <string name="duwasport">DuwaSport</string>
    <string name="duwafood">DuwaFood</string>
    <string name="duwahealth">DuwaHealth</string>
    <string name="duwalaw">DuwaLaw</string>
    <string name="duwatravel">DuwaTravel</string>
    <string name="duwagame">DuwaTainment</string>
    <string name="duwatech">DuwaTech</string>
    <string name="duwaoto">DuwaLife</string>
    <string name="duwaedu">DuwaEdu</string>
    <string name="rekom_berita">Rekomendasi Berita</string>
    <string name="title_berita">Jadwal Timnas Indonesia di Kualifikasi Piala Dunia 2026 Berikutnya</string>
    <string name="ket_berita">DuwaSport ~ Rabu, 27 Maret 2024 19.45 WIB</string>
    <string name="nama_us">Yefta Indri</string>
    <string name="tv_nama">Nama Lengkap</string>
    <string name="logout">Log Out</string>
    <string name="tv_email">Email</string>
    <string name="email_us">yeftaindri@gmail.com</string>
    <string name="tv_notelp">No Telfon</string>
    <string name="notelp_us">081347328899</string>
    <string name="tv_beritafav">Berita Favorit</string>
    <string name="beritafav_us">DuwaSport</string>
    <string name="logout_konfim">Apakah anda yakin ingin keluar?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_account">Akun</string>
    <string name="title_dashboard">Rekomendasi Berita</string>
    <string name="title_home">DuwaNews</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="sk">I agree to the terms and conditions</string>
    <string name="haveacc">Already have an account yet? Login</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="dont_have_acc">Don’t have an account yet? Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="or">Or</string>
    <string name="search">Search</string>
    <string name="syarat">Syarat dan Ketentuan</string>
    <string name="ketentuan">
        1. Penerimaan Ketentuan Penggunaan:
         \nPenggunaan aplikasi ini tunduk pada syarat dan ketentuan yang diuraikan dalam dokumen ini. Dengan mengakses atau menggunakan aplikasi ini, Anda dianggap telah membaca, memahami, dan menyetujui sepenuhnya semua syarat dan ketentuan yang tercantum di sini. Jika Anda tidak setuju dengan salah satu ketentuan ini, Anda tidak diperbolehkan untuk menggunakan aplikasi ini.
         \n\n2. Informasi yang Disediakan:
         \nAplikasi ini menyediakan akses kepada pengguna untuk mengakses berita, artikel, dan konten terkait lainnya. Meskipun kami berusaha untuk menyediakan informasi yang akurat dan terkini, kami tidak memberikan jaminan atau garansi atas keakuratan, kelengkapan, atau keandalan informasi yang disediakan. Pengguna bertanggung jawab untuk menggunakan kebijaksanaan mereka sendiri dalam menafsirkan dan menggunakan informasi yang tersedia dalam aplikasi ini.
         \n\n3. Hak Cipta dan Kekayaan Intelektual:
         \nSeluruh konten yang disediakan dalam aplikasi ini, termasuk tetapi tidak terbatas pada teks, grafik, gambar, audio, video, dan logo, dilindungi oleh hak cipta dan hukum kekayaan intelektual lainnya. Pengguna tidak diperbolehkan untuk mereproduksi, mendistribusikan, mengubah, atau menggunakan konten dalam aplikasi ini untuk tujuan komersial tanpa izin tertulis dari pemilik hak cipta.
         \n\n4. Penggunaan Aplikasi:
         \nPenggunaan aplikasi ini hanya diperbolehkan untuk tujuan pribadi dan non-komersial. Pengguna tidak diperbolehkan untuk menggunakan aplikasi ini untuk tujuan yang melanggar hukum atau merugikan pihak lain. Pelanggaran terhadap ketentuan ini dapat mengakibatkan penghentian akses pengguna ke aplikasi dan/atau tindakan hukum yang sesuai.
         \n\n5. Kebijakan Privasi:
         \nKami menghormati privasi pengguna kami. Informasi pribadi yang dikumpulkan melalui penggunaan aplikasi ini akan dikelola sesuai dengan Kebijakan Privasi kami, yang dapat diakses melalui aplikasi ini. Dengan menggunakan aplikasi ini, pengguna setuju dengan pengumpulan, penggunaan, dan pengungkapan informasi pribadi mereka sesuai dengan Kebijakan Privasi kami.
         \n\n6. Perubahan pada Syarat dan Ketentuan:
         \nKami berhak untuk mengubah atau memodifikasi syarat dan ketentuan ini setiap saat tanpa pemberitahuan sebelumnya. Perubahan tersebut akan efektif segera setelah diposting dalam aplikasi ini. Pengguna dianggap telah menerima perubahan tersebut dengan melanjutkan penggunaan aplikasi setelah perubahan tersebut diumumkan.
         \n\n7. Penghentian Akses:
         \nKami berhak untuk menghentikan atau membatasi akses pengguna ke aplikasi ini, tanpa pemberitahuan sebelumnya, jika kami yakin bahwa pengguna telah melanggar syarat dan ketentuan yang tercantum di sini.
         \n\n8. Hukum yang Berlaku:
         \nSyarat dan ketentuan ini tunduk pada hukum yang berlaku di wilayah tempat aplikasi ini dioperasikan. Setiap sengketa yang timbul terkait dengan penggunaan aplikasi ini akan diselesaikan di pengadilan yang berwenang di wilayah tersebut.
         \n\n9. Kontak:
         \nJika Anda memiliki pertanyaan atau kekhawatiran terkait dengan syarat dan ketentuan ini, silakan hubungi kami melalui informasi kontak yang tersedia dalam aplikasi ini.
         \nDengan menggunakan aplikasi ini, Anda dianggap telah menyetujui semua syarat dan ketentuan yang tercantum di atas.</string>
    <string name="setuju">Saya Setuju</string>
    <string name="Email">Email</string>
    <string name="NomorHP">Nomor HP</string>
    <string-array name="data_name">
        <item>Ahmad Dahlan</item>
        <item>Ahmad Yani</item>
        <item>Sutomo</item>
        <item>Gatot Soebroto</item>
        <item>Ki Hadjar Dewantara</item>
        <item>Mohammad Hatta</item>
        <item>Soedirman</item>
        <item>Soekarno</item>
        <item>Soepomo</item>
    </string-array>
</resources>