<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SyaratKetentuanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/syarat"
            android:textSize="25dp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:justificationMode="inter_word"
            android:padding="20dp"
            android:text="@string/ketentuan" />

        <Button
            android:id="@+id/setuju"
            android:layout_width="203dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/orange"
            android:text="@string/setuju" />

    </LinearLayout>


</ScrollView>