<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_login"
        android:label="@string/title_home"
        tools:layout="@layout/activity_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.examplebotomnav.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_duwaSportFragment"
            app:destination="@id/duwaSportFragment" />
    </fragment>

    <fragment
        android:id="@+id/duwaSportFragment"
        android:name="com.example.examplebotomnav.kategori.DuwaSportFragment"
        android:label="DuwaSportFragment"
        tools:layout="@layout/fragment_duwa_sport" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.examplebotomnav.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.examplebotomnav.ui.detailUser.DetailUserFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_detail_user" />
    <fragment
        android:id="@+id/syaratKetentuanFragment"
        android:name="com.example.examplebotomnav.SyaratKetentuanFragment"
        android:label="fragment_syarat_ketentuan"
        tools:layout="@layout/fragment_syarat_ketentuan" />
</navigation>